--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
         "vue-loader": "^16.1.2"
     },
     "dependencies": {
+        "@ckeditor/ckeditor5-build-classic": "^34.2.0",
         "@ckeditor/ckeditor5-vue": "^4.0.1",
         "@vueform/multiselect": "^2.3.3",
         "ckeditor5-document-editor": "^19.1.1",
